# orientation_processor

./: .gitignore  AGENTS.md  README.md  config.yaml  pyproject.toml  requirements.txt  stage2.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: codex-review.yml
stage1/: config_stage1.yaml  midi_and_wav_to_json OLD.py  midi_and_wav_to_json.py
stage2/: io.py  miners.py  plots.py  utils.py
